vendor/zerocopy/tests/ui-msrv/diagnostic-not-implemented-from-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-from-bytes.rs:16:24
   |
16 |     takes_from_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_from_bytes`
  --> tests/ui-msrv/diagnostic-not-implemented-from-bytes.rs:19:24
   |
19 | fn takes_from_bytes<T: FromBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_bytes`
